--- a/school.html
+++ b/school.html
@@ -47,15 +47,15 @@
                 
                 <div class="school-grid">
                     <div class="school-card">
-                        <img src="Schools/tapon.jpg" alt="Tapon Elementary School">
+                        <img src="Schools/Tapon.jpg" alt="Tapon Elementary School">
                         <h3>Tapon Elementary School</h3>
                     </div>
                     <div class="school-card">
-                        <img src="Schools/balaygtiki.jpg" alt="Balaygtiki Elementary School">
+                        <img src="Schools/Balaygtiki.jpg" alt="Balaygtiki Elementary School">
                         <h3>Balaygtiki Elementary School</h3>
                     </div>
                     <div class="school-card">
-                        <img src="Schools/calaboon.jpg" alt="Calaboon Elementary School">
+                        <img src="Schools/Calaboon.jpg" alt="Calaboon Elementary School">
                         <h3>Calaboon Elementary School</h3>
                     </div>
                     <div class="school-card">
@@ -63,7 +63,7 @@
                         <h3>Bullogan Elementary School</h3>
                     </div>
                     <div class="school-card">
-                        <img src="Schools/cogon.jpg" alt="Cogon Elementary School">
+                        <img src="../Schools/cogon.jpg" alt="Cogon Elementary School">
                         <h3>Cogon Elementary School</h3>
                     </div>
                     <div class="school-card">
