--- a/school.html
+++ b/school.html
@@ -63,7 +63,7 @@
                         <h3>Bullogan Elementary School</h3>
                     </div>
                     <div class="school-card">
-                        <img src="../Schools/cogon.jpg" alt="Cogon Elementary School">
+                        <img src="Schools/cogon.jpg" alt="Cogon Elementary School">
                         <h3>Cogon Elementary School</h3>
                     </div>
                     <div class="school-card">
