--- a/school.html
+++ b/school.html
@@ -11,30 +11,30 @@
     <body>
         <nav>
             <ul class="menu">
-                <li><a class="active" href="index.html">HOME</a></li>
+                <li><a class="active" href="./">HOME</a></li>
                 <li class="dropdown"><a href="#">ABOUT US</a>
                     <ul class="dropdown-content">
-                        <li><a href="history.html">History</a></li>
-                        <li><a href="legend.html">Legend</a></li>
-                        <li><a href="bisnok.html">Bisnok</a></li>
+                        <li><a href="./history">History</a></li>
+                        <li><a href="./legend">Legend</a></li>
+                        <li><a href="./bisnok">Bisnok</a></li>
     
                     </ul>
                 </li>
                 <li class="dropdown"><a href="#">FOR RESIDENTS</a>
                     <ul class="dropdown-content">
-                        <li><a href="services.html">Emergency Services</a></li>
-                        <li><a href="#">Schools and Colleges</a></li>
-                        <li><a href="barangay.html">Barangays</a></li>
+                        <li><a href="./services">Emergency Services</a></li>
+                        <li><a href="./school">Schools and Colleges</a></li>
+                        <li><a href="./barangay">Barangays</a></li>
                     </ul>
                 </li>
                 <li class="dropdown"><a href="#">FOR VISITORS</a>
                     <ul class="dropdown-content">
-                        <li><a href="map.html">Map & Location</a></li>
-                        <li><a href="TouristSpot.html">Travel Information</a></li>
-                        <li><a href="church.html">Parish Church</a></li>
+                        <li><a href="./map">Map & Location</a></li>
+                        <li><a href="./TouristSpot">Travel Information</a></li>
+                        <li><a href="./church">Parish Church</a></li>
                     </ul>
                 </li>
-                <li><a href="contact.html">CONTACT US</a></li>
+                <li><a href="./contact">CONTACT US</a></li>
             </ul>
         </nav>
     
@@ -63,7 +63,7 @@
                         <h3>Bullogan Elementary School</h3>
                     </div>
                     <div class="school-card">
-                        <img src="Schools/cogon.jpg" alt="Cogon Elementary School">
+                        <img src="  Schools/cogon.jpg" alt="Cogon Elementary School">
                         <h3>Cogon Elementary School</h3>
                     </div>
                     <div class="school-card">
