--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 Captain, Pedro Ricamora. A man whose whose descendants wield some kind of political power in the
                 municipality.
                 <br><br>
-                <a href="legend.html">
+                <a href="./legend">
                     <button>Learn More!</button>
                 </a>
             </div>
@@ -73,7 +73,7 @@
                 of its decorative elements. The bell tower to one side of the church has a dodecagonal plan, usual for
                 colonial churches.
                 <br><br>
-                <a href="church.html">
+                <a href="./church">
                     <button>Learn More!</button>
                 </a>
             </div>
@@ -86,7 +86,7 @@
                 dance merrily bringing all the Bisnok-performance focused on : the preparation and the cooking of the
                 native
                 <br><br>
-                <a href="bisnok.html">
+                <a href="./bisnok">
                     <button>Learn More!</button>
                 </a>
             </div>
