--- a/school.html
+++ b/school.html
@@ -30,7 +30,7 @@
                 <li class="dropdown"><a href="#">FOR VISITORS</a>
                     <ul class="dropdown-content">
                         <li><a href="./map">Map & Location</a></li>
-                        <li><a href="./TouristSpot">Travel Information</a></li>
+                        <li><a href="./touristSpot">Travel Information</a></li>
                         <li><a href="./church">Parish Church</a></li>
                     </ul>
                 </li>
