--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <li class="dropdown"><a href="#">FOR VISITORS</a>
                 <ul class="dropdown-content">
                     <li><a href="./map">Map & Location</a></li>
-                    <li><a href="./touristspot">Travel Information</a></li>
+                    <li><a href="./touristSpot">Travel Information</a></li>
                     <li><a href="./church">Parish Church</a></li>
                 </ul>
             </li>
