--- a/touristSpot.html
+++ b/touristSpot.html
@@ -30,11 +30,11 @@
             <li class="dropdown"><a href="#">FOR VISITORS</a>
                 <ul class="dropdown-content">
                     <li><a href="./map">Map & Location</a></li>
-                    <li><a href="./touristspot">Travel Information</a></li>
+                    <li><a href="./touristSpot">Travel Information</a></li>
                     <li><a href="./church">Parish Church</a></li>
                 </ul>
             </li>
-            <li><a href="contact.html">CONTACT US</a></li>
+            <li><a href="./contact">CONTACT US</a></li>
         </ul>
     </nav>
 
