--- a/church.html
+++ b/church.html
@@ -29,7 +29,7 @@
             <li class="dropdown"><a href="#">FOR RESIDENTS</a>
                 <ul class="dropdown-content">
                     <li><a href="./services">Emergency Services</a></li>
-                    <li><a href="./school.">Schools and Colleges</a></li>
+                    <li><a href="./school">Schools and Colleges</a></li>
                     <li><a href="./barangay">Barangays</a></li>
                 </ul>
             </li>
